--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3.1"
 
 services:
-  pythonapp:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  graph: # user: neo4j, password: empty
+    image: neo4j:4.4.3-community
+    ports:
+      - "7474:7474"
+      - "7687:7687"
     volumes:
-      - ..:/workspace
-    command: sleep infinity
+      - ./data:/data
+    environment:
+      - NEO4J_AUTH=none
